--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,11 +11,12 @@
   margin-left: auto;
   left: 0;
   right: 0;
+  font-size: 2.1em;
 }
 
 .home .links {
   position: absolute;
-  top: 173px;
+  top: 179px;
   margin-left: auto;
   left: 0;
   right: 0;
@@ -32,7 +33,7 @@
 }
 
 .float-icon {
-  height: 50px;
+  height: 60px;
   position: absolute;
   animation-name: float;
   animation-fill-mode: both;
@@ -45,7 +46,7 @@
   animation-duration: 25s;
 }
 .fl-icon1 {
-  top: 78%;
+  top: 70%;
   animation-duration: 50s;
 }
 .fl-icon2 {
@@ -61,7 +62,7 @@
   animation-duration: 40s;
 }
 .fl-icon5 {
-  top: 84%;
+  top: 80%;
   animation-duration: 42s;
 }
 .fl-icon6 {
