--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,6 +12,7 @@
   left: 0;
   right: 0;
   font-size: 2.1em;
+  z-index: 1;
 }
 
 .home .links {
@@ -20,6 +21,7 @@
   margin-left: auto;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .home .links img {
