Style the overall look of the area

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -5,3 +5,13 @@
   margin: auto;
   color: #193a6f;
 }
+
+.card-area {
+  display: flex;
+  justify-content: space-between;
+}
+
+.experience h1,
+.education h1 {
+  margin: 30px;
+}
