Adjust colors to match scheme

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -42,8 +42,8 @@
   width: 50px;
   font-family: Quicksand;
   background-color: #5b84c4;
-  color: #fb9b50;
-  border: 9px solid #fb9b50;
+  color: #f98125;
+  border: 9px solid #f98125;
   border-radius: 10px;
   font-size: 2em;
   font-weight: bolder;
@@ -64,7 +64,7 @@
 .project img {
   width: 580px;
   height: 350px;
-  border: 6px solid #fb9b50;
+  border: 6px solid #f98125;
   border-radius: 13px;
 }
 
