--- a/src/components/Experience/InfoCard/InfoCard.css
+++ b/src/components/Experience/InfoCard/InfoCard.css
@@ -5,6 +5,7 @@
   border-radius: 40px;
   background-color: white;
   color: black;
+  border: 3px solid #f98125;
   text-align: left;
   font-size: 0.98em;
 }
