--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -35,3 +35,19 @@
   right: 0;
   box-sizing: border-box;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1300px) {
+  .about-container {
+    width: 900px;
+  }
+
+  .about img {
+    left: auto;
+    transform: translateX(-90px);
+    top: -40px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+}
