--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -15,3 +15,17 @@
 .education h1 {
   margin: 30px;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1300px) {
+  .experience-education {
+    width: 900px;
+    height: 1500px;
+  }
+  .card-area {
+    display: grid;
+  }
+}
+
+@media screen and (max-width: 420px) {
+}
