--- a/src/components/Experience/InfoCard/InfoCard.css
+++ b/src/components/Experience/InfoCard/InfoCard.css
@@ -19,3 +19,15 @@
   margin-top: 15px;
   margin-left: 25px;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1300px) {
+  .information-card {
+    width: 800px;
+    height: 240px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+}
