--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -80,3 +80,10 @@
     transform: translateX(50vw);
   }
 }
+
+/* Media Queries */
+/* @media screen and (max-width: 1028px) {
+} */
+
+@media screen and (max-width: 420px) {
+}
