--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -43,3 +43,13 @@ nav .site-title {
   color: #fb9b50;
   text-decoration: underline overline #fb9b50;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1028px) {
+  .navigation-buttons button {
+    font-size: 0.95em;
+  }
+}
+
+@media screen and (max-width: 420px) {
+}
