--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -118,3 +118,24 @@
 .project-links a:hover {
   border: 3px solid #fb9b50;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1300px) {
+  .projects {
+    max-width: 900px;
+    height: 585px;
+  }
+  .project-links {
+    display: flex;
+    width: 100%;
+    left: 0;
+    bottom: 45px;
+    justify-content: space-around;
+  }
+  .project article {
+    opacity: 90%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+}
