Add base queries for skills

--- a/src/components/TechnicalSkills/TechnicalSkills.css
+++ b/src/components/TechnicalSkills/TechnicalSkills.css
@@ -29,3 +29,10 @@
   line-height: 1.8em;
   font-weight: bold;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1028px) {
+}
+
+@media screen and (max-width: 420px) {
+}
