Slight adjustements made for smaller tablet

--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,11 @@
   }
 }
 
+@media screen and (max-width: 780px) {
+  .App {
+    width: 900px;
+  }
+}
+
 @media screen and (max-width: 420px) {
 }
