--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -49,5 +49,11 @@
   }
 }
 
+@media screen and (max-width: 780px) {
+  .about-container {
+    width: 780px;
+  }
+}
+
 @media screen and (max-width: 420px) {
 }
