--- a/src/components/Experience/InfoCard/InfoCard.css
+++ b/src/components/Experience/InfoCard/InfoCard.css
@@ -36,4 +36,9 @@
 }
 
 @media screen and (max-width: 420px) {
+  .information-card {
+    width: 80vw;
+    height: max-content;
+    margin-left: 3vw;
+  }
 }
